# GAN_UI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
GAN/: .gitignore  config.json  controller.py  data_loader.py  gradio_app.py  main.py  model_builder.py  train_manager.py
configurable_gan_trainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
